--- a/rapport.ipynb
+++ b/rapport.ipynb
@@ -57,10 +57,10 @@
         }
       },
       "source": [
-        "!python3 -m pip install --upgrade pip\n",
-        "!python3 -m pip install matplotlib numpy scikit-learn==0.23.2\n"
+        "#!python3 -m pip install --upgrade pip\n",
+        "#!python3 -m pip install matplotlib numpy scikit-learn==0.23.2\n"
       ],
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -125,7 +125,7 @@
         "from sklearn.datasets import fetch_openml\n",
         "from sklearn.model_selection import train_test_split"
       ],
-      "execution_count": 3,
+      "execution_count": 2,
       "outputs": []
     },
     {
@@ -139,7 +139,7 @@
         "random.seed(1342)\n",
         "np.random.seed(1342)"
       ],
-      "execution_count": 4,
+      "execution_count": 5,
       "outputs": []
     },
     {
@@ -167,7 +167,7 @@
       "source": [
         "mnist_data, mnist_target = fetch_openml('mnist_784', version=1, return_X_y=True)"
       ],
-      "execution_count": 5,
+      "execution_count": 4,
       "outputs": []
     },
     {
@@ -187,14 +187,14 @@
         "    return dataset_length, target_length\n",
         "\n"
       ],
-      "execution_count": 44,
+      "execution_count": 7,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
         "id": "S6o3cFlMfLLD",
-        "outputId": "03e6395b-45db-4ec9-d62a-cfc0d2c1755a",
+        "outputId": "2d975a40-e377-43b4-dad8-1d6202196aa9",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -202,7 +202,7 @@
       "source": [
         "data_length(mnist_data, mnist_target)"
       ],
-      "execution_count": 50,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -214,7 +214,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 50
+          "execution_count": 8
         }
       ]
     },
@@ -222,7 +222,7 @@
       "cell_type": "code",
       "metadata": {
         "id": "MeehIOV3FlVa",
-        "outputId": "c43f8eb2-1584-40a1-b6d5-aeb043bb991f",
+        "outputId": "09127fb0-6fc4-4994-bf3d-a0431257af65",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 281
@@ -240,7 +240,7 @@
         "\n",
         "plot_one_image(mnist_data, mnist_target ,0)"
       ],
-      "execution_count": 45,
+      "execution_count": 9,
       "outputs": [
         {
           "output_type": "display_data",
@@ -276,7 +276,7 @@
         "assert X_train_length == y_train_length and X_train_length == 46900\n",
         "assert X_test_length == y_test_length and X_test_length == 23100\n"
       ],
-      "execution_count": 46,
+      "execution_count": 10,
       "outputs": []
     },
     {
@@ -292,7 +292,7 @@
       "source": [
         "plot_one_image(X_train, y_train , 120)"
       ],
-      "execution_count": 47,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -322,7 +322,7 @@
       "source": [
         "plot_one_image(X_test, y_test , 250)"
       ],
-      "execution_count": 35,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -352,7 +352,7 @@
         "\n",
         "normalized_data_value = normalize_data(mnist_data)"
       ],
-      "execution_count": 65,
+      "execution_count": 11,
       "outputs": []
     },
     {
@@ -383,7 +383,8 @@
       "source": [
         "def target_to_one_hot(target: np.array) -> np.array:\n",
         "  \n",
-        "    one_hot_matrix = np.zeros((target.shape[0], 10))\n",
+        "    one_hot_matrix = np.zeros([target.shape[0], 10])\n",
+        "    #one_hot_matrix[np.arange(target.shape[0], int(target)] = 1\n",
         "    for i in range(0, target.shape[0]):\n",
         "      label = int(target[i])\n",
         "      one_hot_matrix[i, label] = 1;\n",
@@ -391,22 +392,22 @@
         "    ###\n",
         "    return one_hot_matrix"
       ],
-      "execution_count": 94,
+      "execution_count": 18,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
         "id": "RLL6AbdNgqQi",
-        "outputId": "38e6c51b-c210-41f4-e95d-a9e4d771be52",
+        "outputId": "df9f674e-ad82-4043-bfee-704352256d3e",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
       "source": [
-        "target_to_one_hot(mnist_target.reshape(-1,1))"
+        "target_to_one_hot(mnist_target)"
       ],
-      "execution_count": 95,
+      "execution_count": 20,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -424,7 +425,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 95
+          "execution_count": 20
         }
       ]
     },
@@ -447,8 +448,9 @@
       "source": [
         "def sigmoid(M: np.array) -> np.array:\n",
         "    \"\"\"Apply a sigmoid to the input array\"\"\"\n",
-        "    # TODO\n",
-        "    return None"
+        "    z = 1/(1 + np.exp(-M)) \n",
+        "    \n",
+        "    return z"
       ],
       "execution_count": null,
       "outputs": []
@@ -461,8 +463,9 @@
       "source": [
         "def d_sigmoid(M: np.array)-> np.array:\n",
         "    \"\"\"Compute the derivative of the sigmoid\"\"\" \n",
-        "    # TODO\n",
-        "    return None"
+        "    dz = sigmoid(M) * (1-sigmoid(M))\n",
+        "    \n",
+        "    return dz"
       ],
       "execution_count": null,
       "outputs": []
@@ -474,12 +477,45 @@
       },
       "source": [
         "def softmax(X: np.array)-> np.array:\n",
-        "    \"\"\"Apply a softmax to the input array\"\"\"\n",
-        "    # TODO\n",
-        "    return None"
+        "    #s = softmax(X, axis=0)\n",
+        "    numerator = np.exp(X)\n",
+        "    denominator = np.sum(numerator)\n",
+        "    softmax = numerator/denominator\n",
+        "\n",
+        "    return softmax\n",
+        "  "
       ],
-      "execution_count": null,
+      "execution_count": 29,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "XCbJ7P0cRf-c",
+        "outputId": "fc49dcb6-120a-45a1-8906-260d8f60e1ad",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "softmax(np.array([[1, 2, 4], [4, 1, 10]]))"
+      ],
+      "execution_count": 30,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([[1.22729907e-04, 3.33614475e-04, 2.46509607e-03],\n",
+              "       [2.46509607e-03, 1.22729907e-04, 9.94490734e-01]])"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 30
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -539,7 +575,7 @@
         "        input_data = Layer()\n",
         "        # TODO: initialize the Z matrix with the a matrix containing only zeros\n",
         "        # its shape should be (minibatch_size, config[0])\n",
-        "        input_data.Z = None\n",
+        "        input_data.Z = np.zeros([minibatch_size, config[0]])\n",
         "        self.layers.append(input_data)\n",
         "                                        \n",
         "        for i in range(1, len(config)):\n",
@@ -548,34 +584,35 @@
         "            nlines_prev, ncols_prev = self.layers[i - 1].Z.shape\n",
         "            # TODO: initilize the weight matrix W in the layer with a random normal distribution\n",
         "            # its shape should be (ncols_prev, nnodes)\n",
-        "            layer.W = None\n",
+        "            layer.W = np.random.randn(ncols_prev, nnodes)\n",
         "            # TODO: initilize the matrix Z in the layer with a matrix containing only zeros\n",
         "            # its shape should be (nlines_prev, nnodes)\n",
-        "            layer.Z = None\n",
+        "            layer.Z = np.zeros([nlines_prev, nnodes])\n",
         "            # TODO: use the sigmoid activation function\n",
-        "            layer.activation = None\n",
+        "            layer.activation = sigmoid\n",
         "            self.layers.append(layer)\n",
         "        # TODO: Your last layer activation should be a softmax\n",
-        "        self.layers[-1].activation = None\n",
+        "        self.layers[-1].activation = softmax\n",
         "        \n",
         "    def one_step_forward(self, signal: np.array, cur_layer: Layer)-> np.array:\n",
         "        # Compute the F and Z matrix for the current layer and return Z\n",
         "        \n",
         "        # TODO: Compute the dot product betzeen the signal and the current layer W matrix\n",
-        "        S = None\n",
+        "        S = np.dot(signal, cur_layer.W)\n",
         "        # TODO: Compute the F matrix of the current layer\n",
-        "        cur_layer.F = None\n",
-        "        # Compute the activation od the current layer\n",
-        "        cur_layer.Z = None\n",
+        "        cur_layer.F = np.tanspose(d_sigmoid(S))\n",
+        "        # Compute the activation of the current layer\n",
+        "        cur_layer.Z = sigmoid(S)\n",
         "        return cur_layer.Z\n",
         "       \n",
         "    def forward_pass(self, input_data: np.array)-> np.array:\n",
         "        # TODO: perform the whole forward pass using the on_step_forward function\n",
+        "        one_step_forward(input_data)\n",
         "        pass\n",
         "    \n",
         "    def one_step_backward(self, prev_layer: Layer, cur_layer: Layer)-> Layer:\n",
         "        # TODO: Compute the D matrix of the current layer using the previous layer and return the current layer\n",
-        "        Di = None\n",
+        "        Di = prev_layer.F*(np.dot(prev_layer.W, cur_layer.D))\n",
         "        cur_layer.D = Di\n",
         "        return cur_layer\n",
         "        \n",
@@ -588,6 +625,7 @@
         "    def update_weights(self, cur_layer: Layer, next_layer: Layer)-> Layer:\n",
         "        # TODO: Update the W matrix of the next_layer using the current_layer and the learning rate\n",
         "        # and return the next_layer\n",
+        "        next_layer.W = current_layer.W \n",
         "        pass\n",
         "    \n",
         "    def update_all_weights(self)-> None:\n",
