--- a/rapport.ipynb
+++ b/rapport.ipynb
@@ -57,8 +57,8 @@
         }
       },
       "source": [
-        "#!python3 -m pip install --upgrade pip\n",
-        "#!python3 -m pip install matplotlib numpy scikit-learn==0.23.2\n"
+        "!python3 -m pip install --upgrade pip\n",
+        "!python3 -m pip install matplotlib numpy scikit-learn==0.23.2\n"
       ],
       "execution_count": null,
       "outputs": [
@@ -139,7 +139,7 @@
         "random.seed(1342)\n",
         "np.random.seed(1342)"
       ],
-      "execution_count": 5,
+      "execution_count": 3,
       "outputs": []
     },
     {
@@ -187,7 +187,7 @@
         "    return dataset_length, target_length\n",
         "\n"
       ],
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -202,7 +202,7 @@
       "source": [
         "data_length(mnist_data, mnist_target)"
       ],
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -240,7 +240,7 @@
         "\n",
         "plot_one_image(mnist_data, mnist_target ,0)"
       ],
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -276,7 +276,7 @@
         "assert X_train_length == y_train_length and X_train_length == 46900\n",
         "assert X_test_length == y_test_length and X_test_length == 23100\n"
       ],
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -352,7 +352,7 @@
         "\n",
         "normalized_data_value = normalize_data(mnist_data)"
       ],
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -392,7 +392,7 @@
         "    ###\n",
         "    return one_hot_matrix"
       ],
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -407,7 +407,7 @@
       "source": [
         "target_to_one_hot(mnist_target)"
       ],
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -485,14 +485,14 @@
         "    return softmax\n",
         "  "
       ],
-      "execution_count": 29,
+      "execution_count": 7,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
         "id": "XCbJ7P0cRf-c",
-        "outputId": "fc49dcb6-120a-45a1-8906-260d8f60e1ad",
+        "outputId": "fd2ce0c9-4bc3-4921-e308-40c6cce8e02d",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -500,7 +500,7 @@
       "source": [
         "softmax(np.array([[1, 2, 4], [4, 1, 10]]))"
       ],
-      "execution_count": 30,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -513,7 +513,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 30
+          "execution_count": 8
         }
       ]
     },
@@ -556,7 +556,7 @@
         "        self.F = None\n",
         "        self.activation = None"
       ],
-      "execution_count": null,
+      "execution_count": 9,
       "outputs": []
     },
     {
@@ -612,7 +612,7 @@
         "    \n",
         "    def one_step_backward(self, prev_layer: Layer, cur_layer: Layer)-> Layer:\n",
         "        # TODO: Compute the D matrix of the current layer using the previous layer and return the current layer\n",
-        "        Di = prev_layer.F*(np.dot(prev_layer.W, cur_layer.D))\n",
+        "        Di = np.transpose(prev_layer.F)*(np.dot(prev_layer.W, cur_layer.D))\n",
         "        cur_layer.D = Di\n",
         "        return cur_layer\n",
         "        \n",
@@ -620,6 +620,7 @@
         "        self.layers[-1].D = D_out.T\n",
         "        # TODO: Compute the D matrix for all the layers (excluding the first one which corresponds to the input itself)\n",
         "        # (you should only use self.layers[1:])\n",
+        "        self.layers[1:] = \n",
         "        pass\n",
         "    \n",
         "    def update_weights(self, cur_layer: Layer, next_layer: Layer)-> Layer:\n",
@@ -630,6 +631,7 @@
         "    \n",
         "    def update_all_weights(self)-> None:\n",
         "        # TODO: Update all W matrix using the update_weights function\n",
+        "        update_weights(cur_layer.W, next_layer.W)\n",
         "        pass\n",
         "        \n",
         "    def get_error(self, y_pred: np.array, y_batch: np.array)-> float:\n",
@@ -645,7 +647,7 @@
         "            X_batch = X[i,:,:].reshape(self.minibatch_size, -1)\n",
         "            y_batch = y[i,:,:].reshape(self.minibatch_size, -1)           \n",
         "            # TODO: get y_pred using the forward pass\n",
-        "            error_sum += None\n",
+        "            error_sum += forward_pass(y_pred)\n",
         "        return error_sum / nbatch\n",
         "            \n",
         "        \n",
@@ -657,7 +659,7 @@
         "        y_test = y_test.reshape(-1, self.minibatch_size, 10)\n",
         "        \n",
         "        # TODO: Get the number of batch based on X_train's shape\n",
-        "        nbatch = None\n",
+        "        nbatch = X_train.shape[0]\n",
         "        error_test = 0.0\n",
         "        for epoch in range(0, nepoch):\n",
         "            error_sum_train = 0.0\n",
