--- a/rapport.ipynb
+++ b/rapport.ipynb
@@ -125,7 +125,7 @@
         "from sklearn.datasets import fetch_openml\n",
         "from sklearn.model_selection import train_test_split"
       ],
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -139,7 +139,7 @@
         "random.seed(1342)\n",
         "np.random.seed(1342)"
       ],
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -167,7 +167,7 @@
       "source": [
         "mnist_data, mnist_target = fetch_openml('mnist_784', version=1, return_X_y=True)"
       ],
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -485,7 +485,7 @@
         "    return softmax\n",
         "  "
       ],
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -500,7 +500,7 @@
       "source": [
         "softmax(np.array([[1, 2, 4], [4, 1, 10]]))"
       ],
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -556,7 +556,7 @@
         "        self.F = None\n",
         "        self.activation = None"
       ],
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -600,15 +600,22 @@
         "        # TODO: Compute the dot product betzeen the signal and the current layer W matrix\n",
         "        S = np.dot(signal, cur_layer.W)\n",
         "        # TODO: Compute the F matrix of the current layer\n",
-        "        cur_layer.F = np.tanspose(d_sigmoid(S))\n",
+        "        cur_layer.F = d_sigmoid(S).T\n",
         "        # Compute the activation of the current layer\n",
-        "        cur_layer.Z = sigmoid(S)\n",
+        "        cur_layer.Z = cur_layer.activation(S)\n",
         "        return cur_layer.Z\n",
         "       \n",
         "    def forward_pass(self, input_data: np.array)-> np.array:\n",
         "        # TODO: perform the whole forward pass using the on_step_forward function\n",
-        "        one_step_forward(input_data)\n",
-        "        pass\n",
+        "        self.layers[0].Z = input_data\n",
+        "\n",
+        "        for i in range(1, len(self.config)):\n",
+        "            signal = self.layers[i-1].Z\n",
+        "            cur_layer = self.layers[i]\n",
+        "            _ = self.one_step_forward(signal, cur_layer)\n",
+        "\n",
+        "        return self.layers[-1].Z\n",
+        "        \n",
         "    \n",
         "    def one_step_backward(self, prev_layer: Layer, cur_layer: Layer)-> Layer:\n",
         "        # TODO: Compute the D matrix of the current layer using the previous layer and return the current layer\n",
