--- a/rapport.ipynb
+++ b/rapport.ipynb
@@ -619,7 +619,7 @@
         "    \n",
         "    def one_step_backward(self, prev_layer: Layer, cur_layer: Layer)-> Layer:\n",
         "        # TODO: Compute the D matrix of the current layer using the previous layer and return the current layer\n",
-        "        Di = np.transpose(prev_layer.F)*(np.dot(prev_layer.W, cur_layer.D))\n",
+        "        Di = cur_layer.F * np.dot(prev_layer.W, prev_layer.D)\n",
         "        cur_layer.D = Di\n",
         "        return cur_layer\n",
         "        \n",
