--- a/rapport.ipynb
+++ b/rapport.ipynb
@@ -627,20 +627,23 @@
         "        self.layers[-1].D = D_out.T\n",
         "        # TODO: Compute the D matrix for all the layers (excluding the first one which corresponds to the input itself)\n",
         "        # (you should only use self.layers[1:])\n",
-        "        self.layers[1:] = \n",
-        "        pass\n",
+        "        for layers in self.layers[1:]:\n",
+        "            Di = self.layers[i]\n",
+        "            _ = one_step_backward(prev_layer, cur_layer)\n",
+        "\n",
+        "        \n",
         "    \n",
         "    def update_weights(self, cur_layer: Layer, next_layer: Layer)-> Layer:\n",
         "        # TODO: Update the W matrix of the next_layer using the current_layer and the learning rate\n",
         "        # and return the next_layer\n",
-        "        next_layer.W = current_layer.W \n",
-        "        pass\n",
+        "        next_layer.W = current_layer.W - np.dot(learning_rate, current_layer.W)\n",
+        "        \n",
         "    \n",
         "    def update_all_weights(self)-> None:\n",
         "        # TODO: Update all W matrix using the update_weights function\n",
         "        update_weights(cur_layer.W, next_layer.W)\n",
         "        pass\n",
-        "        \n",
+        "      \n",
         "    def get_error(self, y_pred: np.array, y_batch: np.array)-> float:\n",
         "        # TODO: return the accuracy on the predictions\n",
         "        # the accuracy should be in the [0.0, 1.0] range\n",
