--- a/rapport.ipynb
+++ b/rapport.ipynb
@@ -647,7 +647,9 @@
         "    def get_error(self, y_pred: np.array, y_batch: np.array)-> float:\n",
         "        # TODO: return the accuracy on the predictions\n",
         "        # the accuracy should be in the [0.0, 1.0] range\n",
-        "        pass\n",
+        "        tolerance = 1.0\n",
+        "        accuracy = (numpy.abs(y_pred - y_batch) < tolerance ).all(axis=(0,2)).mean()\n",
+        "        return accuracy\n",
         "    \n",
         "    def get_test_error(self, X: np.array, y: np.array)-> float:\n",
         "        # TODO: Compute the accuracy using the get_error function\n",
