--- a/rapport.ipynb
+++ b/rapport.ipynb
@@ -125,7 +125,7 @@
         "from sklearn.datasets import fetch_openml\n",
         "from sklearn.model_selection import train_test_split"
       ],
-      "execution_count": null,
+      "execution_count": 2,
       "outputs": []
     },
     {
@@ -139,7 +139,7 @@
         "random.seed(1342)\n",
         "np.random.seed(1342)"
       ],
-      "execution_count": null,
+      "execution_count": 3,
       "outputs": []
     },
     {
@@ -167,7 +167,7 @@
       "source": [
         "mnist_data, mnist_target = fetch_openml('mnist_784', version=1, return_X_y=True)"
       ],
-      "execution_count": null,
+      "execution_count": 4,
       "outputs": []
     },
     {
@@ -187,7 +187,7 @@
         "    return dataset_length, target_length\n",
         "\n"
       ],
-      "execution_count": null,
+      "execution_count": 20,
       "outputs": []
     },
     {
@@ -276,7 +276,7 @@
         "assert X_train_length == y_train_length and X_train_length == 46900\n",
         "assert X_test_length == y_test_length and X_test_length == 23100\n"
       ],
-      "execution_count": null,
+      "execution_count": 21,
       "outputs": []
     },
     {
@@ -452,7 +452,7 @@
         "    \n",
         "    return z"
       ],
-      "execution_count": null,
+      "execution_count": 9,
       "outputs": []
     },
     {
@@ -467,7 +467,7 @@
         "    \n",
         "    return dz"
       ],
-      "execution_count": null,
+      "execution_count": 10,
       "outputs": []
     },
     {
@@ -485,14 +485,14 @@
         "    return softmax\n",
         "  "
       ],
-      "execution_count": null,
+      "execution_count": 11,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
         "id": "XCbJ7P0cRf-c",
-        "outputId": "fd2ce0c9-4bc3-4921-e308-40c6cce8e02d",
+        "outputId": "fb15d45e-0878-42ea-e715-9da214c5586d",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -500,7 +500,7 @@
       "source": [
         "softmax(np.array([[1, 2, 4], [4, 1, 10]]))"
       ],
-      "execution_count": null,
+      "execution_count": 12,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -513,7 +513,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 8
+          "execution_count": 12
         }
       ]
     },
@@ -556,7 +556,7 @@
         "        self.F = None\n",
         "        self.activation = None"
       ],
-      "execution_count": null,
+      "execution_count": 13,
       "outputs": []
     },
     {
@@ -596,7 +596,6 @@
         "        \n",
         "    def one_step_forward(self, signal: np.array, cur_layer: Layer)-> np.array:\n",
         "        # Compute the F and Z matrix for the current layer and return Z\n",
-        "        \n",
         "        # TODO: Compute the dot product betzeen the signal and the current layer W matrix\n",
         "        S = np.dot(signal, cur_layer.W)\n",
         "        # TODO: Compute the F matrix of the current layer\n",
@@ -609,7 +608,7 @@
         "        # TODO: perform the whole forward pass using the on_step_forward function\n",
         "        self.layers[0].Z = input_data\n",
         "\n",
-        "        for i in range(1, len(self.config)):\n",
+        "        for i in range(1, self.nlayers):\n",
         "            signal = self.layers[i-1].Z\n",
         "            cur_layer = self.layers[i]\n",
         "            _ = self.one_step_forward(signal, cur_layer)\n",
@@ -627,28 +626,30 @@
         "        self.layers[-1].D = D_out.T\n",
         "        # TODO: Compute the D matrix for all the layers (excluding the first one which corresponds to the input itself)\n",
         "        # (you should only use self.layers[1:])\n",
-        "        for layers in self.layers[1:]:\n",
-        "            Di = self.layers[i]\n",
-        "            _ = one_step_backward(prev_layer, cur_layer)\n",
+        "        for i in range(1, self.nlayers):\n",
+        "            cur_layer = self.layers[i]\n",
+        "            prev_layer = self.layers[i-1] \n",
+        "            _ = self.one_step_backward(prev_layer, cur_layer)\n",
         "\n",
         "        \n",
         "    \n",
         "    def update_weights(self, cur_layer: Layer, next_layer: Layer)-> Layer:\n",
         "        # TODO: Update the W matrix of the next_layer using the current_layer and the learning rate\n",
         "        # and return the next_layer\n",
-        "        next_layer.W = current_layer.W - np.dot(learning_rate, current_layer.W)\n",
+        "        next_layer.W = current_layer.W - self.learning_rate*((np.dot(next_layer.D, cur_layer.Z)).T)\n",
         "        \n",
         "    \n",
         "    def update_all_weights(self)-> None:\n",
         "        # TODO: Update all W matrix using the update_weights function\n",
-        "        update_weights(cur_layer.W, next_layer.W)\n",
-        "        pass\n",
+        "        for layers in self.layers:\n",
+        "            self.update_weights(cur_layer, next_layer)\n",
+        "       \n",
         "      \n",
         "    def get_error(self, y_pred: np.array, y_batch: np.array)-> float:\n",
         "        # TODO: return the accuracy on the predictions\n",
         "        # the accuracy should be in the [0.0, 1.0] range\n",
         "        tolerance = 1.0\n",
-        "        accuracy = (numpy.abs(y_pred - y_batch) < tolerance ).all(axis=(0,2)).mean()\n",
+        "        accuracy = (np.abs(y_pred - y_batch) < tolerance ).all(axis=(0,2)).mean()\n",
         "        return accuracy\n",
         "    \n",
         "    def get_test_error(self, X: np.array, y: np.array)-> float:\n",
@@ -687,8 +688,33 @@
         "            print(f\"Training accuracy: {error_sum_train / nbatch:.3f}, Test accuracy: {error_test:.3f}\")\n",
         "        return error_test"
       ],
-      "execution_count": null,
+      "execution_count": 59,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "o-HfYxeMWlJC",
+        "outputId": "69ebb2ac-8d5d-4e3b-c158-06d7eea5136e",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 131
+        }
+      },
+      "source": [
+        "get_error(np.array([2, 3, 7]) , np.array([5, 5, 2])"
+      ],
+      "execution_count": 60,
+      "outputs": [
+        {
+          "output_type": "error",
+          "ename": "SyntaxError",
+          "evalue": "ignored",
+          "traceback": [
+            "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-60-3a95b2c94b11>\"\u001b[0;36m, line \u001b[0;32m1\u001b[0m\n\u001b[0;31m    get_error(np.array([2, 3, 7]) , np.array([5, 5, 2])\u001b[0m\n\u001b[0m                                                       ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m unexpected EOF while parsing\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -719,13 +745,18 @@
         "\n",
         "ffnn = FFNN(config=[784, 3, 3, 10], minibatch_size=minibatch_size, learning_rate=learning_rate)"
       ],
-      "execution_count": null,
+      "execution_count": 54,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "rxWTqroqFlYM"
+        "id": "rxWTqroqFlYM",
+        "outputId": "abe43f59-4861-43a4-dbfc-73894fee084b",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 357
+        }
       },
       "source": [
         "assert X_train.shape[0] % minibatch_size == 0\n",
@@ -733,8 +764,29 @@
         "\n",
         "err = ffnn.train(nepoch, X_train, y_train, X_test, y_test)"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 55,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "/usr/local/lib/python3.6/dist-packages/ipykernel_launcher.py:3: RuntimeWarning: overflow encountered in exp\n",
+            "  This is separate from the ipykernel package so we can avoid doing imports until\n"
+          ],
+          "name": "stderr"
+        },
+        {
+          "output_type": "error",
+          "ename": "TypeError",
+          "evalue": "ignored",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-55-a4c0c4bcef5b>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0;32massert\u001b[0m \u001b[0mX_test\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mshape\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m%\u001b[0m \u001b[0mminibatch_size\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0;36m0\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 4\u001b[0;31m \u001b[0merr\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mffnn\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtrain\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mnepoch\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mX_train\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0my_train\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mX_test\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0my_test\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+            "\u001b[0;32m<ipython-input-53-e33f25a486e9>\u001b[0m in \u001b[0;36mtrain\u001b[0;34m(self, nepoch, X_train, y_train, X_test, y_test)\u001b[0m\n\u001b[1;32m    115\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    116\u001b[0m                 \u001b[0my_pred\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mforward_pass\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mX_batch\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 117\u001b[0;31m                 \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mbackward_pass\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0my_pred\u001b[0m \u001b[0;34m-\u001b[0m \u001b[0my_batch\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    118\u001b[0m                 \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mupdate_all_weights\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    119\u001b[0m                 \u001b[0merror_sum_train\u001b[0m \u001b[0;34m+=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mget_error\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0my_pred\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0my_batch\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;31mTypeError\u001b[0m: unsupported operand type(s) for -: 'float' and 'str'"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
