--- a/rapport.ipynb
+++ b/rapport.ipynb
@@ -125,7 +125,7 @@
         "from sklearn.datasets import fetch_openml\n",
         "from sklearn.model_selection import train_test_split"
       ],
-      "execution_count": 2,
+      "execution_count": 4,
       "outputs": []
     },
     {
@@ -139,7 +139,7 @@
         "random.seed(1342)\n",
         "np.random.seed(1342)"
       ],
-      "execution_count": 3,
+      "execution_count": 5,
       "outputs": []
     },
     {
@@ -167,7 +167,7 @@
       "source": [
         "mnist_data, mnist_target = fetch_openml('mnist_784', version=1, return_X_y=True)"
       ],
-      "execution_count": 4,
+      "execution_count": 7,
       "outputs": []
     },
     {
@@ -187,14 +187,14 @@
         "    return dataset_length, target_length\n",
         "\n"
       ],
-      "execution_count": 20,
+      "execution_count": 8,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
         "id": "S6o3cFlMfLLD",
-        "outputId": "2d975a40-e377-43b4-dad8-1d6202196aa9",
+        "outputId": "11390587-9451-4f1e-d794-13acda62fc25",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -202,7 +202,7 @@
       "source": [
         "data_length(mnist_data, mnist_target)"
       ],
-      "execution_count": null,
+      "execution_count": 9,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -214,7 +214,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 8
+          "execution_count": 9
         }
       ]
     },
@@ -276,7 +276,7 @@
         "assert X_train_length == y_train_length and X_train_length == 46900\n",
         "assert X_test_length == y_test_length and X_test_length == 23100\n"
       ],
-      "execution_count": 21,
+      "execution_count": 24,
       "outputs": []
     },
     {
@@ -352,7 +352,7 @@
         "\n",
         "normalized_data_value = normalize_data(mnist_data)"
       ],
-      "execution_count": null,
+      "execution_count": 25,
       "outputs": []
     },
     {
@@ -392,7 +392,7 @@
         "    ###\n",
         "    return one_hot_matrix"
       ],
-      "execution_count": null,
+      "execution_count": 11,
       "outputs": []
     },
     {
@@ -452,7 +452,7 @@
         "    \n",
         "    return z"
       ],
-      "execution_count": 9,
+      "execution_count": 15,
       "outputs": []
     },
     {
@@ -467,7 +467,7 @@
         "    \n",
         "    return dz"
       ],
-      "execution_count": 10,
+      "execution_count": 16,
       "outputs": []
     },
     {
@@ -485,7 +485,7 @@
         "    return softmax\n",
         "  "
       ],
-      "execution_count": 11,
+      "execution_count": 17,
       "outputs": []
     },
     {
@@ -556,7 +556,7 @@
         "        self.F = None\n",
         "        self.activation = None"
       ],
-      "execution_count": 13,
+      "execution_count": 12,
       "outputs": []
     },
     {
@@ -620,15 +620,17 @@
         "        # TODO: Compute the D matrix of the current layer using the previous layer and return the current layer\n",
         "        Di = cur_layer.F * np.dot(prev_layer.W, prev_layer.D)\n",
         "        cur_layer.D = Di\n",
+        "\n",
         "        return cur_layer\n",
         "        \n",
         "    def backward_pass(self, D_out: np.array)-> None:\n",
         "        self.layers[-1].D = D_out.T\n",
         "        # TODO: Compute the D matrix for all the layers (excluding the first one which corresponds to the input itself)\n",
         "        # (you should only use self.layers[1:])\n",
-        "        for i in range(1, self.nlayers):\n",
+        "        for i in range((self.nlayers)-1, 1):\n",
         "            cur_layer = self.layers[i]\n",
         "            prev_layer = self.layers[i-1] \n",
+        "\n",
         "            _ = self.one_step_backward(prev_layer, cur_layer)\n",
         "\n",
         "        \n",
@@ -636,21 +638,25 @@
         "    def update_weights(self, cur_layer: Layer, next_layer: Layer)-> Layer:\n",
         "        # TODO: Update the W matrix of the next_layer using the current_layer and the learning rate\n",
         "        # and return the next_layer\n",
-        "        next_layer.W = current_layer.W - self.learning_rate*((np.dot(next_layer.D, cur_layer.Z)).T)\n",
+        "        next_layer.W = cur_layer.W - self.learning_rate*((np.dot(next_layer.D, cur_layer.Z)).T)\n",
         "        \n",
         "    \n",
         "    def update_all_weights(self)-> None:\n",
         "        # TODO: Update all W matrix using the update_weights function\n",
-        "        for layers in self.layers:\n",
-        "            self.update_weights(cur_layer, next_layer)\n",
+        "        for i in range(0, (self.nlayers)-1):\n",
+        "            _ = self.update_weights(cur_layer[i], next_layer[i])\n",
         "       \n",
         "      \n",
         "    def get_error(self, y_pred: np.array, y_batch: np.array)-> float:\n",
         "        # TODO: return the accuracy on the predictions\n",
         "        # the accuracy should be in the [0.0, 1.0] range\n",
-        "        tolerance = 1.0\n",
-        "        accuracy = (np.abs(y_pred - y_batch) < tolerance ).all(axis=(0,2)).mean()\n",
-        "        return accuracy\n",
+        "        sum = 0\n",
+        "\n",
+        "        for i in range (0, len(y_pred)):\n",
+        "            if argmax(y_pred[i] == argmax(y_batch[i])):\n",
+        "              sum = sum + 1\n",
+        "\n",
+        "        return sum\n",
         "    \n",
         "    def get_test_error(self, X: np.array, y: np.array)-> float:\n",
         "        # TODO: Compute the accuracy using the get_error function\n",
@@ -688,33 +694,8 @@
         "            print(f\"Training accuracy: {error_sum_train / nbatch:.3f}, Test accuracy: {error_test:.3f}\")\n",
         "        return error_test"
       ],
-      "execution_count": 59,
+      "execution_count": 67,
       "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "o-HfYxeMWlJC",
-        "outputId": "69ebb2ac-8d5d-4e3b-c158-06d7eea5136e",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 131
-        }
-      },
-      "source": [
-        "get_error(np.array([2, 3, 7]) , np.array([5, 5, 2])"
-      ],
-      "execution_count": 60,
-      "outputs": [
-        {
-          "output_type": "error",
-          "ename": "SyntaxError",
-          "evalue": "ignored",
-          "traceback": [
-            "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-60-3a95b2c94b11>\"\u001b[0;36m, line \u001b[0;32m1\u001b[0m\n\u001b[0;31m    get_error(np.array([2, 3, 7]) , np.array([5, 5, 2])\u001b[0m\n\u001b[0m                                                       ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m unexpected EOF while parsing\n"
-          ]
-        }
-      ]
     },
     {
       "cell_type": "markdown",
@@ -745,45 +726,38 @@
         "\n",
         "ffnn = FFNN(config=[784, 3, 3, 10], minibatch_size=minibatch_size, learning_rate=learning_rate)"
       ],
-      "execution_count": 54,
+      "execution_count": 68,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
         "id": "rxWTqroqFlYM",
-        "outputId": "abe43f59-4861-43a4-dbfc-73894fee084b",
+        "outputId": "5bce19e8-5e76-4c83-b0c8-ba160fb8b3a0",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 357
+          "height": 346
         }
       },
       "source": [
         "assert X_train.shape[0] % minibatch_size == 0\n",
         "assert X_test.shape[0] % minibatch_size == 0\n",
         "\n",
-        "err = ffnn.train(nepoch, X_train, y_train, X_test, y_test)"
+        "err = ffnn.train(nepoch, normalize_data(X_train), target_to_one_hot(y_train), normalize_data(X_test), target_to_one_hot(y_test))"
       ],
-      "execution_count": 55,
+      "execution_count": 69,
       "outputs": [
         {
-          "output_type": "stream",
-          "text": [
-            "/usr/local/lib/python3.6/dist-packages/ipykernel_launcher.py:3: RuntimeWarning: overflow encountered in exp\n",
-            "  This is separate from the ipykernel package so we can avoid doing imports until\n"
-          ],
-          "name": "stderr"
-        },
-        {
           "output_type": "error",
-          "ename": "TypeError",
+          "ename": "NameError",
           "evalue": "ignored",
           "traceback": [
             "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-            "\u001b[0;32m<ipython-input-55-a4c0c4bcef5b>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0;32massert\u001b[0m \u001b[0mX_test\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mshape\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m%\u001b[0m \u001b[0mminibatch_size\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0;36m0\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 4\u001b[0;31m \u001b[0merr\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mffnn\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtrain\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mnepoch\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mX_train\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0my_train\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mX_test\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0my_test\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-            "\u001b[0;32m<ipython-input-53-e33f25a486e9>\u001b[0m in \u001b[0;36mtrain\u001b[0;34m(self, nepoch, X_train, y_train, X_test, y_test)\u001b[0m\n\u001b[1;32m    115\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    116\u001b[0m                 \u001b[0my_pred\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mforward_pass\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mX_batch\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 117\u001b[0;31m                 \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mbackward_pass\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0my_pred\u001b[0m \u001b[0;34m-\u001b[0m \u001b[0my_batch\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    118\u001b[0m                 \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mupdate_all_weights\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    119\u001b[0m                 \u001b[0merror_sum_train\u001b[0m \u001b[0;34m+=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mget_error\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0my_pred\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0my_batch\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;31mTypeError\u001b[0m: unsupported operand type(s) for -: 'float' and 'str'"
+            "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-69-46f6fdc23fa0>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0;32massert\u001b[0m \u001b[0mX_test\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mshape\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m%\u001b[0m \u001b[0mminibatch_size\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0;36m0\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 4\u001b[0;31m \u001b[0merr\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mffnn\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtrain\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mnepoch\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mnormalize_data\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mX_train\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtarget_to_one_hot\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0my_train\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mnormalize_data\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mX_test\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtarget_to_one_hot\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0my_test\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+            "\u001b[0;32m<ipython-input-67-1e671d81858a>\u001b[0m in \u001b[0;36mtrain\u001b[0;34m(self, nepoch, X_train, y_train, X_test, y_test)\u001b[0m\n\u001b[1;32m    122\u001b[0m                 \u001b[0my_pred\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mforward_pass\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mX_batch\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    123\u001b[0m                 \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mbackward_pass\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0my_pred\u001b[0m \u001b[0;34m-\u001b[0m \u001b[0my_batch\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 124\u001b[0;31m                 \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mupdate_all_weights\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    125\u001b[0m                 \u001b[0merror_sum_train\u001b[0m \u001b[0;34m+=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mget_error\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0my_pred\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0my_batch\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    126\u001b[0m             \u001b[0merror_test\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mget_test_error\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mX_test\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0my_test\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;32m<ipython-input-67-1e671d81858a>\u001b[0m in \u001b[0;36mupdate_all_weights\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m     78\u001b[0m         \u001b[0;31m# TODO: Update all W matrix using the update_weights function\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     79\u001b[0m         \u001b[0;32mfor\u001b[0m \u001b[0mi\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mrange\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mnlayers\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m-\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 80\u001b[0;31m             \u001b[0m_\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mupdate_weights\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mcur_layer\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mnext_layer\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     81\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     82\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;31mNameError\u001b[0m: name 'cur_layer' is not defined"
           ]
         }
       ]
