--- a/rapport.ipynb
+++ b/rapport.ipynb
@@ -800,14 +800,28 @@
       "source": [
         "# I managed to have more than 92% of accuracy with 2 different configs :\n",
         "\n",
-        "#config=[784, 500, 500, 10] était la première et j'ai pu dépasser les 93% d'accuracy sur le test accuracy avec seulement 5 epoch. Cependant le training est extrêmement long je n'ai donc pas été plus loin.\n",
+        "#config=[784, 500, 500, 10], minibatch_size = 5, nepoch = 5, learning_rate = 0.01 était la première et j'ai pu dépasser les 93% d'accuracy sur le test accuracy avec seulement 5 epoch. Cependant le training est extrêmement long je n'ai donc pas été plus loin.\n",
         "\n",
-        "#config=[784, 20, 20, 10] est celle actuelle et qui me permet d'atteindre 92,6 % d'accuracy, elle est beaucoup plus rapide à train et c'est donc pour cette raison que je l'ai gardé\n",
+        "#config=[784, 20, 20, 10], minibatch_size = 20, nepoch = 20, learning_rate = 0.01 est celle actuelle et qui me permet d'atteindre 92,6 % d'accuracy, elle est beaucoup plus rapide à train et c'est donc pour cette raison que je l'ai gardé.\n",
         "\n",
         "\n",
         "# - minibatch_size \n",
         "\n",
-        "# this parameter have a strong influence on the test and training accuracy, when minibatch_size is bigger the accuracy is better\n",
+        "# this parameter have a strong influence on the test and training accuracy, when minibatch_size is bigger the accuracy is better way faster. Indeed, I didn't need as many hidden layers to reach more than 92% of accuracy\n",
+        "\n",
+        "# - nepoch\n",
+        "\n",
+        "# this parameter varies depending on how much training your config needs. Some config need more training than others like my 2 examples\n",
+        "\n",
+        "# - config\n",
+        "\n",
+        "#Changing the hidden layers has a huge impact on the accuracy. The more hidden layers you have the more accurate is your model. However it takes really long to train your model.\n",
+        "\n",
+        "# - learning rate\n",
+        "\n",
+        "# The learning rate doesn't need to be too low or to high, we notice that the acuracy is crashing if it's too low (learning_rate = 0.001) or too high (learning_rate = 1)\n",
+        "\n",
+        "# Conclusion : The number of hidden layers in config and the minibatch_size are the two parameters to play with to increase the accuracy. In order to have a model that doesn't need a too long training it's better to increase the minibatch_size and have a lower number of hidden layers in config.\n",
         "\n"
       ],
       "execution_count": null,
